@@ -2,7 +2,8 @@
 v5.0-git
 --------
 
-[mms] Add subfolder searching.
+[mms] Add subfolder searching (subfolders dynamically determined at time of
+      search).
 [mms] Refactor inline message image blocking to operate on all messages, not
       just HTML messages.
 [mms] Add attachment message filter.
